--- a/src/main/resources/auth.properties
+++ b/src/main/resources/auth.properties
@@ -1,3 +1,3 @@
-userByQuery=SELECT login, password, true from users where login = ?
-rolesByQuery=SELECT u.login, r.name FROM users u join roles r on u.role_id = r.id where login = ?
+userByQuery=SELECT login, password, isactive from users where login = ?
+rolesByQuery=SELECT u.login, r.roles FROM users u join users_roles r on u.id = r.user_id where login = ?
 defaultRoleForNewUser=ROLE_USER
