--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,12 @@
             <artifactId>validation-api</artifactId>
             <version>1.1.0.Final</version>
         </dependency>
+        <!--jpa repository-->
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+            <version>2.0.10.RELEASE</version>
+        </dependency>
         <!-- test -->
         <dependency>
             <groupId>junit</groupId>
